@@ -8,14 +8,17 @@ This file contains OFSwitch13 release notes (most recent releases first).
 Release 3.X.X (XXX XX, XXXX)
 ============================
 
-- Overriding the OFSwitch13Helper::InstallSwitch () method. When the first
+- Overriding the OFSwitch13Helper::InstallSwitch method. When the first
   parameter is a node container, the method returns an OpenFlow device
   container. When the first parameter is a node pointer, the method returns the
   OpenFlow device pointer. For the latter, there's the optional second
   parameter of a device container that will be configured as switch ports.
 
-- New OFSwitch13Device::GetDpId () method as an alias for the GetDatapathId ()
+- New OFSwitch13Device::GetDpId method as an alias for the GetDatapathId
   method.
+
+- New OFSwitch13Device::GetDatapathStruct and OFSwitch13Port::GetPortStruct
+  methods returning a pointer to the ofsoftswitch13 library structures.
 
 - Renaming OFSwitch13Device attributes and trace sources to better reflect what
   they really represent: PipelineCapacity attribute was renamed to CpuCapacity,
